--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+
     <meta property="og:title" content="Shreya Srivastava - Full Stack Developer Portfolio" />
     <meta property="og:description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies. Fresh graduate with hands-on experience." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Shreya Srivastava - Full Stack Developer" />
     <meta name="twitter:description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
   </head>
 
   <body>
